Spacing issue fixed

--- a/css/images.css
+++ b/css/images.css
@@ -440,6 +440,6 @@ h1, h2, h3, h4, h5, h6 {
 /****************/
 
 .pp-section {
-  padding-top: 2rem;
+  padding-top: 7rem;
  }
 
